--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <a href="https://www.dextools.io/app/en/base/pair-explorer/0x8cbd3a7908e4f6a7f37c51baffe26327acd2042c?t=1768647449440">Chart</a>
 <a href="https://app.uniswap.org/explore/tokens/base/0x84C90D3EEC19bEc0E5fD92c0a6eff766353984de?inputCurrency=NATIVE">Buy</a>
 <a href="https://t.me/thebaseguard">Telegram</a>
-<a href="https://x.com/thebaseguard">X</a>
+<a href="https://x.com/BASEGUARD_">X</a>
         </div>
         <iframe src="https://baseguard.dev/" style="width:100vw;height:calc(100vh + 368px);position:fixed;top:-100px;left:0;" />
     </body>
